--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "axios": "^1.1.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "knex": "^2.3.0",
+        "pg": "^8.8.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
