--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-PORT=3333
-DB_PORT=5432
-DB_HOST=127.0.0.
-DB_USER=postgres
-DB_NAME=orange_evolution
-DB_PWD=12345678
+PORT=
+DB_PORT=
+DB_HOST=
+DB_USER=
+DB_NAME=
+DB_PWD=
