--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "homepage": "https://github.com/orange-squad-thirty-two/orange-evolution-back-end#readme",
     "dependencies": {
         "axios": "^1.1.3",
+        "bcrypt": "^5.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "jsonwebtoken": "^8.5.1",
         "knex": "^2.3.0",
         "pg": "^8.8.0"
     },
