--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "joi": "^17.7.0",
         "jsonwebtoken": "^8.5.1",
         "knex": "^2.3.0",
-        "pg": "^8.8.0"
+        "pg": "^8.8.0",
+        "swagger-ui-express": "^4.6.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
